welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:8: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
else if( die1 == die2 & noDoubles = true )
                      ^withoutDoubles:8: error: type mismatch;
 found   : Unit
 required: Int
else if( die1 == die2 & noDoubles = true )
     ^